// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`breakBefore renders 0 1`] = `
Array [
  .c0 {
  -webkit-break-before: 0;
  break-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: 0;
  break-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: 0;
  break-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: 0;
  break-before: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`breakBefore renders function 1`] = `
Array [
  .c0 {
  -webkit-break-before: hasnot;
  break-before: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: has;
  break-before: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: hasnot;
  break-before: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: has;
  break-before: has;
}

<div
    className="c0"
  />,
]
`;

exports[`breakBefore renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-break-before: invalid.path.1;
  break-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: invalid.path.1;
  break-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: invalid.path.1;
  break-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: invalid.path.1;
  break-before: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`breakBefore renders negative number 1`] = `
Array [
  .c0 {
  -webkit-break-before: -54881;
  break-before: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: -54881;
  break-before: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: -42365;
  break-before: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: -42365;
  break-before: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`breakBefore renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-break-before: July;
  break-before: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: August;
    break-before: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: September;
    break-before: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: November;
    break-before: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-break-before: August;
    break-before: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: July;
  break-before: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: August;
    break-before: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: September;
    break-before: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: November;
    break-before: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-break-before: August;
    break-before: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: January;
  break-before: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: December;
    break-before: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: April;
    break-before: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: May;
    break-before: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-break-before: June;
    break-before: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: January;
  break-before: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: December;
    break-before: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: April;
    break-before: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: May;
    break-before: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-break-before: June;
    break-before: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`breakBefore renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: July;
    break-before: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: August;
    break-before: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: September;
    break-before: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-break-before: November;
    break-before: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: July;
    break-before: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: August;
    break-before: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: September;
    break-before: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-break-before: November;
    break-before: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: May;
    break-before: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: June;
    break-before: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: April;
    break-before: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-break-before: November;
    break-before: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: May;
    break-before: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: June;
    break-before: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-break-before: April;
    break-before: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-break-before: November;
    break-before: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`breakBefore renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-break-before: July;
  break-before: July;
}

@media May {
  .c0 {
    -webkit-break-before: August;
    break-before: August;
  }
}

@media April {
  .c0 {
    -webkit-break-before: September;
    break-before: September;
  }
}

@media January {
  .c0 {
    -webkit-break-before: November;
    break-before: November;
  }
}

@media April {
  .c0 {
    -webkit-break-before: August;
    break-before: August;
  }
}

@media June {
  .c0 {
    -webkit-break-before: November;
    break-before: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: July;
  break-before: July;
}

@media May {
  .c0 {
    -webkit-break-before: August;
    break-before: August;
  }
}

@media April {
  .c0 {
    -webkit-break-before: September;
    break-before: September;
  }
}

@media January {
  .c0 {
    -webkit-break-before: November;
    break-before: November;
  }
}

@media April {
  .c0 {
    -webkit-break-before: August;
    break-before: August;
  }
}

@media June {
  .c0 {
    -webkit-break-before: November;
    break-before: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: April;
  break-before: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-break-before: November;
    break-before: November;
  }
}

@media April {
  .c0 {
    -webkit-break-before: January;
    break-before: January;
  }
}

@media January {
  .c0 {
    -webkit-break-before: December;
    break-before: December;
  }
}

@media April {
  .c0 {
    -webkit-break-before: April;
    break-before: April;
  }
}

@media June {
  .c0 {
    -webkit-break-before: May;
    break-before: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: April;
  break-before: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-break-before: November;
    break-before: November;
  }
}

@media April {
  .c0 {
    -webkit-break-before: January;
    break-before: January;
  }
}

@media January {
  .c0 {
    -webkit-break-before: December;
    break-before: December;
  }
}

@media April {
  .c0 {
    -webkit-break-before: April;
    break-before: April;
  }
}

@media June {
  .c0 {
    -webkit-break-before: May;
    break-before: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`breakBefore renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-break-before: July;
    break-before: July;
  }
}

@media April {
  .c0 {
    -webkit-break-before: August;
    break-before: August;
  }
}

@media January {
  .c0 {
    -webkit-break-before: September;
    break-before: September;
  }
}

@media April {
  .c0 {
    -webkit-break-before: November;
    break-before: November;
  }
}

@media June {
  .c0 {
    -webkit-break-before: August;
    break-before: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-break-before: July;
    break-before: July;
  }
}

@media April {
  .c0 {
    -webkit-break-before: August;
    break-before: August;
  }
}

@media January {
  .c0 {
    -webkit-break-before: September;
    break-before: September;
  }
}

@media April {
  .c0 {
    -webkit-break-before: November;
    break-before: November;
  }
}

@media June {
  .c0 {
    -webkit-break-before: August;
    break-before: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-break-before: January;
    break-before: January;
  }
}

@media April {
  .c0 {
    -webkit-break-before: December;
    break-before: December;
  }
}

@media January {
  .c0 {
    -webkit-break-before: April;
    break-before: April;
  }
}

@media April {
  .c0 {
    -webkit-break-before: May;
    break-before: May;
  }
}

@media June {
  .c0 {
    -webkit-break-before: June;
    break-before: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-break-before: January;
    break-before: January;
  }
}

@media April {
  .c0 {
    -webkit-break-before: December;
    break-before: December;
  }
}

@media January {
  .c0 {
    -webkit-break-before: April;
    break-before: April;
  }
}

@media April {
  .c0 {
    -webkit-break-before: May;
    break-before: May;
  }
}

@media June {
  .c0 {
    -webkit-break-before: June;
    break-before: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`breakBefore renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-break-before: 54881;
  break-before: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: 54881;
  break-before: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: 42365;
  break-before: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: 42365;
  break-before: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`breakBefore renders string 1`] = `
Array [
  .c0 {
  -webkit-break-before: July;
  break-before: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: July;
  break-before: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: June;
  break-before: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: June;
  break-before: June;
}

<div
    className="c0"
  />,
]
`;

exports[`breakBefore renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`breakBefore renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-break-before: DarkSlateBlue;
  break-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: DarkSlateBlue;
  break-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: DarkSlateBlue;
  break-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-break-before: DarkSlateBlue;
  break-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
